# actividad2OS

./: .gitignore  Cargo.toml  README.md  package.json  turbo.json
apps/primes-mpi/: Cargo.toml  hostfile
apps/primes-mpi/src/: main.rs
apps/primes-multithread/: Cargo.toml
apps/primes-multithread/src/: main.rs
apps/primes-sequential/: Cargo.toml
apps/primes-sequential/src/: main.rs
apps/scheduler-sim/: Cargo.toml
apps/scheduler-sim/src/: main.rs
docker/: Dockerfile.mpi-node  docker-compose.yml  hostfile
docker/shared/: .gitkeep
docs/: part1-multithreading.md  part2-scheduling.md  part3-cluster.md  part4-io-management.md
results/: io-analysis-report.md
results/io-raw/: blkid.txt  block-queue-schedulers.txt  df.txt  dmesg-storage-usb.txt  findmnt.txt  iostat.txt  irqbalance-status.txt  kernel-cmdline.txt  lsblk.txt  lsof-top.txt  lsusb.txt  mount.txt  os-release.txt  proc-interrupts.txt  proc-softirqs.txt
scripts/: benchmark.sh  cluster-run.sh  cluster-setup.sh  io-analysis.sh  run-all.sh  scheduler-test.sh  setup-rhel.sh  verify-setup.sh
